# docs/swagger.yaml
@@ -10,6 +10,11 @@ definitions:
       username:
         type: string
     type: object
+  models.EmailResetPassword:
+    properties:
+      email:
+        type: string
+    type: object
   models.ErrorResponse:
     properties:
       message:
@@ -20,6 +25,13 @@ definitions:
       password:
         type: string
       username:
+        type: string
+    type: object
+  models.ResetPasswordById:
+    properties:
+      confirm_password:
+        type: string
+      new_password:
         type: string
     type: object
   models.SuccessResponse:
@@ -36,6 +48,20 @@ definitions:
       message:
         type: string
     type: object
+  models.SuccessResponseResetPassword:
+    properties:
+      data:
+        $ref: '#/definitions/models.TokenResetPassword'
+    type: object
+  models.SuccessResponseUser:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/models.User'
+        type: array
+      message:
+        type: string
+    type: object
   models.Token:
     properties:
       accessToken:
@@ -43,9 +69,147 @@ definitions:
       refreshToken:
         type: string
     type: object
+  models.TokenResetPassword:
+    properties:
+      token:
+        type: string
+    type: object
+  models.User:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      language:
+        type: string
+      name:
+        type: string
+      no_hp:
+        type: string
+      profile_picture:
+        type: string
+      role:
+        type: string
+      status:
+        type: string
+      updated_at:
+        type: string
+      username:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
+  /api/v1/users/{id}:
+    get:
+      consumes:
+      - application/json
+      description: User by id with id in the URL path
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Bearer <JWT Token>
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.SuccessResponseUser'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Endpoint for user by id
+      tags:
+      - users
+  /password/reset:
+    post:
+      consumes:
+      - application/json
+      description: Reset Password User with email
+      parameters:
+      - description: User reset password object
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.EmailResetPassword'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.SuccessResponseResetPassword'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Endpoint for user reset password
+      tags:
+      - Reset Password
+  /password/reset/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Reset Password User with email
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Bearer <JWT Token>
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: User reset password object
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.ResetPasswordById'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.SuccessResponseResetPassword'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Endpoint for user reset password
+      tags:
+      - Reset Password
   /users/login:
     post:
       consumes:
