# routes/user/user.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	userController "emeeting/controllers/user"
+	auth "emeeting/middleware"
 
 	"github.com/labstack/echo/v4"
 )
@@ -9,4 +10,9 @@ import (
 func RegisterRoutes(e *echo.Echo) {
 	e.POST("/users/register", userController.UserRegister)
 	e.POST("/users/login", userController.UserLogin)
+	e.POST("/password/reset", userController.RequestResetPassword)
+	e.PUT("/password/reset/:id", userController.ResetPassword)
+	group := e.Group("/api/v1")
+	group.Use(auth.AuthMiddleware)
+	group.GET("/users/:id", userController.UserById)
 }
